--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ after_success:
   - ssh  ${ACCEPTANCE_USER}@${ACCEPTANCE_HOST} mkdir -p ${DIST_DIR}
   - scp -r dist/* ${ACCEPTANCE_USER}@${ACCEPTANCE_HOST}:${DIST_DIR}/
 addons:
-  firefox: "36.0"
+  apt:
+    packages:
+    - chromium-browser
 env:
   global:
   - secure: M7tZ5uMFAPBNkzNuD0HF9PxeoH3Q9gMsvOCheQd5WCxxcSQwGsw8naErJshXYdAvFLsuTYT0MfHYt/TfcoEHfrykK5GiGaaSQB0MQtDWokQPHUl3S8Cjjh8+Aj3V/J+yyEFZ7AY9PvoSnHdeEuZfAYO/tuj9IBmC9tsbV5K5hX4=
