--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "start": "npm install && bower install && grunt",
     "build": "npm install && bower install && grunt build",
-    "webdriver-manager-update": "node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update",
-    "test": "npm run webdriver-manager-update && grunt regression"
+    "test": "webdriver-manager update && grunt regression"
   },
   "repository": {
     "type": "git",
@@ -30,26 +29,26 @@
   "homepage": "https://github.com/mulesoft/api-console",
   "dependencies": {},
   "devDependencies": {
-    "bower": "^1.5.3",
-    "grunt": "~0.4.0",
-    "grunt-angular-templates": "~0.5.7",
-    "grunt-cli": "~0.1.13",
-    "grunt-concurrent": "~1.0.0",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-concat": "~0.5.0",
-    "grunt-contrib-connect": "~0.9.0",
-    "grunt-contrib-copy": "~0.7.0",
-    "grunt-contrib-jshint": "~0.10.0",
-    "grunt-contrib-sass": "~0.8.1",
-    "grunt-contrib-uglify": "^0.9.2",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-css-prefix": "~0.2.3",
-    "grunt-karma": "~0.10.1",
-    "grunt-protractor-runner": "~1.1.4",
-    "jasmine-spec-reporter": "~1.1.0",
-    "karma": "~0.12.0",
-    "load-grunt-tasks": "~2.0.0",
-    "protractor": "^2.4.0",
-    "serve-static": "~1.8.0"
+    "bower": "^1.8.0",
+    "grunt": "^1.0.1",
+    "grunt-angular-templates": "^1.1.0",
+    "grunt-cli": "^1.2.0",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^1.0.2",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-jshint": "^1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-css-prefix": "^0.2.3",
+    "grunt-karma": "^2.0.0",
+    "grunt-protractor-runner": "^4.0.0",
+    "jasmine-spec-reporter": "^2.7.0",
+    "karma": "^1.3.0",
+    "load-grunt-tasks": "^3.5.2",
+    "protractor": "^4.0.11",
+    "serve-static": "^1.11.1"
   }
 }
